View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0029705 | Community | OCCT:Shape Healing | public | 2018-04-19 14:53 | 2019-09-29 12:36 |
Reporter | BenjaminBihler | Assigned To | bugmaster | ||
Priority | normal | Severity | text | ||
Status | closed | Resolution | fixed | ||
Product Version | 7.2.0 | ||||
Target Version | 7.4.0 | Fixed in Version | 7.4.0 | ||
Summary | 0029705: Foundation Classes - ShapeAnalysis_FreeBounds intention documentation is misleading | ||||
Description | I have stumbled over the sentence //! This class is intended to output free bounds of the shape //! (free bounds are the wires consisting of edges referenced by the //! only face). in the class documentation (actually the first sentence). Does "the only face" mean that this class is intended to be used with shells that consist of only one face? Probably not. Probably the sentence should be "free bounds are the wires consisting of edges referenced by only one face". Am I right? I can fix it then. | ||||
Tags | No tags attached. | ||||
Test case number | |||||
|
Branch CR29705 has been created by abv. SHA-1: 74169841f000a2d4504ba1bfa71263a2389ce318 Detailed log of new commits: Author: abv Date: Mon Sep 23 10:01:51 2019 +0300 0029705: Foundation Classes - ShapeAnalysis_FreeBounds intention documentation is misleading Description of the purpose of the class is corrected (wording improved) |
|
Description is corrected, please review branch CR29705. Testing is not required (comments only). |
|
Branch CR29705 was reviewed |
|
Branch CR29705 has been deleted by inv. SHA-1: 74169841f000a2d4504ba1bfa71263a2389ce318 |
occt: master d537c5e6 2019-09-23 07:01:51 Committer: bugmaster Details Diff |
0029705: Foundation Classes - ShapeAnalysis_FreeBounds intention documentation is misleading Description of the purpose of the class is corrected (wording improved) |
Affected Issues 0029705 |
|
mod - src/ShapeAnalysis/ShapeAnalysis_FreeBounds.hxx | Diff File |
Date Modified | Username | Field | Change |
---|---|---|---|
2018-04-19 14:53 | BenjaminBihler | New Issue | |
2018-04-19 14:53 | BenjaminBihler | Assigned To | => abv |
2019-09-04 18:05 | kgv | Summary | ShapeAnalysis_FreeBounds intention documentation is misleading => Foundation Classes - ShapeAnalysis_FreeBounds intention documentation is misleading |
2019-09-23 10:05 | git | Note Added: 0087441 | |
2019-09-23 10:08 | abv | Note Added: 0087442 | |
2019-09-23 10:08 | abv | Assigned To | abv => gka |
2019-09-23 10:08 | abv | Status | new => resolved |
2019-09-23 10:08 | abv | Category | OCCT:Foundation Classes => OCCT:Shape Healing |
2019-09-23 18:32 | gka | Note Added: 0087456 | |
2019-09-23 18:32 | gka | Assigned To | gka => bugmaster |
2019-09-23 18:32 | gka | Status | resolved => reviewed |
2019-09-24 14:21 | bugmaster | Status | reviewed => tested |
2019-09-29 12:19 | bugmaster | Changeset attached | => occt master d537c5e6 |
2019-09-29 12:19 | bugmaster | Status | tested => verified |
2019-09-29 12:19 | bugmaster | Resolution | open => fixed |
2019-09-29 12:36 | git | Note Added: 0087610 |