0029705: Foundation Classes - ShapeAnalysis_FreeBounds intention documentation is misleading

Description of the purpose of the class is corrected (wording improved)